--- a/Activity 2/21_1002_ProjectReport_template/MainLatex.tex
+++ b/Activity 2/21_1002_ProjectReport_template/MainLatex.tex
@@ -31,39 +31,39 @@
 
 \thesistitle
 	{Title}
-	{Student Firstname \& Lastname}
-	{Master of Science}
-	{Department of Computer Science}
-	{July 2021}
+	{Ruslan Masinjila}
+	{}
+	{}
+	{}
 
 \newpage
 \pagenumbering{roman}
 
-\phantomsection
-\include{abstract}
-\phantomsection
-\include{acknowledgments}
+%\phantomsection
+%\include{abstract}
+%\phantomsection
+%\include{acknowledgments}
 
-\tableofcontents
-\listoffigures
-\addcontentsline{toc}{chapter}{List of Figures}
-\listoftables
-\addcontentsline{toc}{chapter}{List of Tables}
+%\tableofcontents
+%\listoffigures
+%\addcontentsline{toc}{chapter}{List of Figures}
+%\listoftables
+%\addcontentsline{toc}{chapter}{List of Tables}
 
 %\printglossary[title={List of Abbreviations}]
 
 \newpage
 \pagenumbering{arabic}
-\include{Introduction}
+%\include{Introduction}
 %\include{RelatedWork}
 %\include{Methodology}
 %\include{Resultsanddiscussion}
 %\include{Conclusion}
 
-\phantomsection
-\addcontentsline{toc}{chapter}{Bibliography}
+%\phantomsection
+%\addcontentsline{toc}{chapter}{Bibliography}
 
-\bibliography{papers}
+%\bibliography{papers}
 
 \end{document}
 
