completed the title page

--- a/Activity 2/21_1002_ProjectReport_template/MainLatex.tex
+++ b/Activity 2/21_1002_ProjectReport_template/MainLatex.tex
@@ -30,7 +30,7 @@
 \begin{document}
 
 \thesistitle
-	{Title}
+	{Activity 1- Part 2}
 	{Ruslan Masinjila}
 	{}
 	{}
@@ -54,7 +54,7 @@
 
 \newpage
 \pagenumbering{arabic}
-%\include{Introduction}
+\include{Introduction}
 %\include{RelatedWork}
 %\include{Methodology}
 %\include{Resultsanddiscussion}
