--- a/Activity 2/21_1002_ProjectReport_template/introduction.tex
+++ b/Activity 2/21_1002_ProjectReport_template/introduction.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction}
+\section{Introduction}
 \label{chap1}
 
 sRNAs are bacterial small regulatory RNAs, usually less than 200 nucleotides in length\cite{wiki:sRNA:2021}. sRNAs are also called non-coding RNAs as they are not translated into a protein. sRNAs play an essential role in gene expression regulation in bacteria and have become a rising class of regulatory RNAs \cite{WAGNER2015133}. They are involved in several biological functions such as virulence, metabolism, and environmental stress response \cite{WAGNER2015133}. The sRNAs exert their functions when they interact with mRNAs (messenger RNAs) or proteins. These mRNAs or proteins are called the targets of the sRNAs. There have been many sRNAs discovered in recent years; however, their corresponding targets are yet to be found. To understand the roles and functions of sRNAs, it is important to find out their targets and thus, identifying targets of sRNAs has become an essential piece of bacterial RNA science.
