--- a/Activity 2/21_1002_ProjectReport_template/thesis.sty
+++ b/Activity 2/21_1002_ProjectReport_template/thesis.sty
@@ -93,15 +93,12 @@ by \\
 
 \vspace{\fill}
 
-A Project Report submitted to the \\
-School of Graduate Studies \\
-in partial fulfillment of the \\
-requirements for the degree of \\
+COMP 690A ─ RESEARCH METHODS IN COMPUTER SCIENCE\\
 #3 \\
 
 \vspace{\fill}
 
-Supervisor: {Dr. Supervisors Name} \\
+Professor: {Dr. Oscar Meruvia-Pastor} \\
 #4 \\
 Memorial University of Newfoundland 
 
