--- a/Activity 2/21_1002_ProjectReport_template/thesis.sty
+++ b/Activity 2/21_1002_ProjectReport_template/thesis.sty
@@ -93,7 +93,7 @@ by \\
 
 \vspace{\fill}
 
-COMP 690A ─ RESEARCH METHODS IN COMPUTER SCIENCE\\
+COMP 690A - RESEARCH METHODS IN COMPUTER SCIENCE\\
 #3 \\
 
 \vspace{\fill}
