--- a/Activity 2/21_1002_ProjectReport_template/introduction.tex
+++ b/Activity 2/21_1002_ProjectReport_template/introduction.tex
@@ -4,3 +4,12 @@
 The goal of this Activity is to evaluate the text and determine if proper referencing of the sources used has been done. It appears that the main topic addressed is Scene Text Recognition (STR). While reading the document, several issues were found, both with text/language used and as well as referencing. The following sections will take a look at some of these issues. Please refer to the annotated version of the original document (1\_annotated.pdf) in the following sections.
 
 \section*{Evaluation of Text} 
+Overall, the language used in the document is not consistent or up to standards for academic audience. The following are some of the issues found in the text:
+\begin{itemize}
+    \item \textbf{Clarity and Structure:} Overall, the document lacks cohesion, coherence and, therefore, clarity. 
+    \item  \textbf{Redundancies:} The word \textit{text} is repeated many times, and in same cases, within the same sentence. Please refer to 1\_annotated.pdf for suggested solution. 
+    \item  \textbf{Long, complex sentences:} These types of sentences appear several times within the document and are hard to follow. 
+    \item  \textbf{Inadequate Academic Tone:} In a number of cases, the author uses casual tone within senteces, for example, beginning a sentence with "So,...", or "However, there is still so much room". 
+\end{itemize} 
+
+
