about to start working on referencing

--- a/Activity 2/21_1002_ProjectReport_template/introduction.tex
+++ b/Activity 2/21_1002_ProjectReport_template/introduction.tex
@@ -7,9 +7,13 @@ The goal of this Activity is to evaluate the text and determine if proper refere
 Overall, the language used in the document is not consistent or up to standards for academic audience. The following are some of the issues found in the text:
 \begin{itemize}
     \item \textbf{Clarity and Structure:} Overall, the document lacks cohesion, coherence and, therefore, clarity. 
-    \item  \textbf{Redundancies:} The word \textit{text} is repeated many times, and in same cases, within the same sentence. Please refer to 1\_annotated.pdf for suggested solution. 
-    \item  \textbf{Long, complex sentences:} These types of sentences appear several times within the document and are hard to follow. 
+    \item  \textbf{Redundancies:} The word \textit{text} is repeated many times, and in same cases, within the same sentence. Please refer to 1\_annotated.pdf for a suggested solution. 
+    \item  \textbf{Long, Complex sentences:} These types of sentences appear several times within the document and are hard to follow. 
     \item  \textbf{Inadequate Academic Tone:} In a number of cases, the author uses casual tone within senteces, for example, beginning a sentence with "So,...", or "However, there is still so much room". 
+\item  \textbf{Insignificant Definitions:} The some definitions given by the author
+do not provide any meaningful explanations of the subjecct matter, for example, "Text localization aims to localize text components..." or "Text verification focuses on verifying text..."
+\item  \textbf{Superficial Claims and Conclusions:} The author makes strong claims and conclusions about methods and outcomes without citing sources.
+
 \end{itemize} 
 
 
