About to start evaluating Bibliography

--- a/Activity 2/21_1002_ProjectReport_template/MainLatex.tex
+++ b/Activity 2/21_1002_ProjectReport_template/MainLatex.tex
@@ -12,6 +12,7 @@
 \usepackage{float}
 \usepackage{subfigure}
 \usepackage{MnSymbol}
+\usepackage{cite}
 
 %\usepackage[toc, nomain, automake, nonumberlist,% don't create 'main' glossary
 %abbreviations% create 'abbreviations' glossary
@@ -63,6 +64,7 @@
 %\phantomsection
 %\addcontentsline{toc}{chapter}{Bibliography}
 
+%\bibliographystyle{IEEEtran}
 %\bibliography{papers}
 
 \end{document}
