--- a/Activity 2/21_1002_ProjectReport_template/introduction.tex
+++ b/Activity 2/21_1002_ProjectReport_template/introduction.tex
@@ -3,6 +3,8 @@
 
 The goal of this Activity is to evaluate the text and determine if proper referencing of the sources used has been done. It appears that the main topic addressed is Scene Text Recognition (STR). While reading the document, several issues were found, both with text/language used and as well as referencing. The following sections will take a look at some of these issues. Please refer to the annotated version of the original document (1\_annotated.pdf) in the following sections.
 
+\newpage
+
 \section*{Evaluation of Text} 
 Overall, the language used in the document is not consistent or up to standards for academic audience. The following are some of the issues found in the text:
 \begin{itemize}
@@ -15,5 +17,22 @@ do not provide any meaningful explanations of the subjecct matter, for example, 
 \item  \textbf{Superficial Claims and Conclusions:} The author makes strong claims and conclusions about methods and outcomes without citing sources.
 
 \end{itemize} 
+
+\newpage
+\section*{Evaluation of Referencing} 
+
+
+\begin{itemize}
+    \item In-Text Citations
+    \begin{itemize}
+    \item \textbf{Incorrect Order Citations:} The author used a mix of ascending and descending order of citations as in "This idea can be utilized in different computer vision tasks, such as image-based search [1], [2], robots navigation [3], [2] and industrial automation [4], [2].". The correct way is ascending order.
+ \item \textbf{Citation Redundancy:} The [2] in the above sentence is repeated thrice. This may be due to irrelevant citations, content, or lack of prioritization.
+    \end{itemize}
+    \item Bibliography
+     \begin{itemize}
+        \item Second level bullet point 1
+        \item Second level bullet point 2
+    \end{itemize}
+\end{itemize}
 
 
