--- a/Activity 2/21_1002_ProjectReport_template/papers.bib
+++ b/Activity 2/21_1002_ProjectReport_template/papers.bib
@@ -6,6 +6,8 @@
 
 %% Add your Bibliography entries here:
 
+@misc{Penders_2018, title={Ten simple rules for responsible referencing}, volume={14}, url={http://dx.doi.org/10.1371/journal.pcbi.1006036}, DOI={10.1371/journal.pcbi.1006036}, number={4}, journal={PLOS Computational Biology}, publisher={Public Library of Science (PLoS)}, author={Penders, Bart}, editor={Markel, Scott}, year={2018}, month=apr, pages={e1006036}, language={en} }
+
 
 @inbook{Haynes2013,
 	address = {New York, NY},
