About to start answering questions

--- a/Activity 2/21_1002_ProjectReport_template/introduction.tex
+++ b/Activity 2/21_1002_ProjectReport_template/introduction.tex
@@ -20,18 +20,21 @@ do not provide any meaningful explanations of the subjecct matter, for example, 
 
 \newpage
 \section*{Evaluation of Referencing} 
+There are some issues with referencing both within the text and Bibliography. Many of these issues are due to inconsitencies in formatting. The following are the issues found.
 
 
 \begin{itemize}
-    \item In-Text Citations
+    \item \textbf{In-Text Citations}
     \begin{itemize}
     \item \textbf{Incorrect Order Citations:} The author used a mix of ascending and descending order of citations as in "This idea can be utilized in different computer vision tasks, such as image-based search [1], [2], robots navigation [3], [2] and industrial automation [4], [2].". The correct way is ascending order.
  \item \textbf{Citation Redundancy:} The [2] in the above sentence is repeated thrice. This may be due to irrelevant citations, content, or lack of prioritization.
     \end{itemize}
-    \item Bibliography
+    \item \textbf{Bibliography}
      \begin{itemize}
-        \item Second level bullet point 1
-        \item Second level bullet point 2
+ \item \textbf{Inconsistent Formatting of Names:} While entry [1] lists authors with initials followed by last names, entries [2], [3], and [5] use the first name followed by the last name. Additionally, entry [4] combines both cases.
+ \item \textbf{Inconsistent Formatting of Publishers:} Entry [1] uses IEEE Computer Society, while entry [3] uses "Institute of Electrical and Electronics Engineers Inc., USA
+    \end{itemize}
+ \item \textbf{Inconsistent Formatting of Page numbers:} Page numbers are either of different format or missing entirely. 
     \end{itemize}
 \end{itemize}
 
