about to start Grading

--- a/Activity 2/21_1002_ProjectReport_template/introduction.tex
+++ b/Activity 2/21_1002_ProjectReport_template/introduction.tex
@@ -1,7 +1,7 @@
 \chapter*{Evaluation of Text and Referencing in the Document Provided}
 \label{chap1}
 
-The goal of this Activity is to evaluate the text and determine if proper referencing of the sources used has been done. It appears that the main topic addressed is Scene Text Recognition (STR). While reading the document, several issues were found, both with text/language used and as well as referencing. The following sections will take a look at some of these issues. Please refer to the annotated version of the original document (1\_annotated.pdf) in the following sections.
+The goal of this Activity is to evaluate the text and determine if proper referencing of the sources used has been done. It appears that the main topic addressed is Scene Text Recognition (STR). While reading the document, several issues were found, both with text/language used as well as referencing. The following two sections will take a look at some of these issues. The final section will grade the text out of 100 based on the evaluation. Please refer to the annotated version of the original document (1\_annotated.pdf) in the following sections.
 
 \newpage
 
@@ -20,13 +20,13 @@ do not provide any meaningful explanations of the subjecct matter, for example, 
 
 \newpage
 \section*{Evaluation of Referencing} 
-There are some issues with referencing both within the text and Bibliography. Many of these issues are due to inconsitencies in formatting. The following are the issues found.
+Many of the referencing issues within the text and Bibliography are due to inconsistencies as follows:
 
 
 \begin{itemize}
     \item \textbf{In-Text Citations}
     \begin{itemize}
-    \item \textbf{Incorrect Order Citations:} The author used a mix of ascending and descending order of citations as in "This idea can be utilized in different computer vision tasks, such as image-based search [1], [2], robots navigation [3], [2] and industrial automation [4], [2].". The correct way is ascending order.
+    \item \textbf{Incorrect Order Citations:} The author used a mix of ascending (correct) and descending (incorrect) in-text citation order as in "This idea can be utilized in different computer vision tasks, such as image-based search [1], [2], robots navigation [3], [2] and industrial automation [4], [2]."
  \item \textbf{Citation Redundancy:} The [2] in the above sentence is repeated thrice. This may be due to irrelevant citations, content, or lack of prioritization.
     \end{itemize}
     \item \textbf{Bibliography}
@@ -34,8 +34,11 @@ There are some issues with referencing both within the text and Bibliography. Ma
  \item \textbf{Inconsistent Formatting of Names:} While entry [1] lists authors with initials followed by last names, entries [2], [3], and [5] use the first name followed by the last name. Additionally, entry [4] combines both cases.
  \item \textbf{Inconsistent Formatting of Publishers:} Entry [1] uses IEEE Computer Society, while entry [3] uses "Institute of Electrical and Electronics Engineers Inc., USA
     \end{itemize}
- \item \textbf{Inconsistent Formatting of Page numbers:} Page numbers are either of different format or missing entirely. 
+ \item \textbf{Inconsistent Page numbers:} Page numbers are either of different format or missing entirely. 
     \end{itemize}
 \end{itemize}
+\newpage
+\section*{Grading} 
+
 
 
