about t start populating the table

--- a/Activity 2/21_1002_ProjectReport_template/MainLatex.tex
+++ b/Activity 2/21_1002_ProjectReport_template/MainLatex.tex
@@ -13,6 +13,7 @@
 \usepackage{subfigure}
 \usepackage{MnSymbol}
 \usepackage{cite}
+\usepackage{array}
 
 %\usepackage[toc, nomain, automake, nonumberlist,% don't create 'main' glossary
 %abbreviations% create 'abbreviations' glossary
