--- a/Activity 2/21_1002_ProjectReport_template/introduction.tex
+++ b/Activity 2/21_1002_ProjectReport_template/introduction.tex
@@ -39,6 +39,21 @@ Many of the referencing issues within the text and Bibliography are due to incon
 \end{itemize}
 \newpage
 \section*{Grading} 
+The following table shows deductions (if any) for the cateogies provided in the objectives for this activity.
+
+\begin{table}[h!]
+\centering
+\begin{tabular}{|>{\raggedright\arraybackslash}p{4cm}|>{\raggedright\arraybackslash}p{3cm}|>{\raggedright\arraybackslash}p{6cm}|}
+\hline
+\textbf{Category} & \textbf{Deduction} & \textbf{Reason} \\ \hline
+Objective 1 & Deduction 1 & Reason 1 \\ \hline
+Objective 2 & Deduction 2 & Reason 2 \\ \hline
+Objective 3 & Deduction 3 & Reason 3 \\ \hline
+Objective 4 & Deduction 4 & Reason 4 \\ \hline
+\end{tabular}
+\caption{Grades}
+\label{tab:grades}
+\end{table}
 
 
 
