about to conclude

--- a/Activity 2/21_1002_ProjectReport_template/introduction.tex
+++ b/Activity 2/21_1002_ProjectReport_template/introduction.tex
@@ -39,21 +39,16 @@ Many of the referencing issues within the text and Bibliography are due to incon
 \end{itemize}
 \newpage
 \section*{Grading} 
-The following table shows deductions (if any) for the cateogies provided in the objectives for this activity.
+This section will provide graeds, out of 100, for the text in the document provided for this activity (1.pdf). The grades will be distributed among the following categories:
 
-\begin{table}[h!]
-\centering
-\begin{tabular}{|>{\raggedright\arraybackslash}p{4cm}|>{\raggedright\arraybackslash}p{3cm}|>{\raggedright\arraybackslash}p{6cm}|}
-\hline
-\textbf{Category} & \textbf{Deduction} & \textbf{Reason} \\ \hline
-Objective 1 & Deduction 1 & Reason 1 \\ \hline
-Objective 2 & Deduction 2 & Reason 2 \\ \hline
-Objective 3 & Deduction 3 & Reason 3 \\ \hline
-Objective 4 & Deduction 4 & Reason 4 \\ \hline
-\end{tabular}
-\caption{Grades}
-\label{tab:grades}
-\end{table}
+\begin{enumerate}
+ \item \textbf{That the latex template provided is properly used:} Here, it seems that the author did not use correctly the template provided due to inconsistencies in the Bibliography. Had the Author used the template the correct way, the references in the papers.bib file would be properly formatted in the Bibliography. Additionally, the title page is missing (this may have been reducted post submission.). Therefore, \textbf{-10\%} for this category.
+ \item \textbf{That the paragraph(s) make logical sense (no semantic errors) and have appropriate grammar:} Grammar errors include mixed use of past, present and future tenses when describing how Deep Learning methods help STR and "environment noise" instead of "environmental noise" (\textbf{-10\%}). Lack of clarity and structure, as well as long, complex sentences as described in the Evaluation section significantly contribute to semantic errors (\textbf{-10\%}).
+ \item \textbf{That the 5 references provided are complete and can be easily found when looking for them online:} The references could be found online. However, Digital Object Identifiers (DOI) would speed up the search.
+ \item \textbf{That the references are referred to properly, and that they do reflect the original intention or meaning of the original article being referred:} Generally referencing was OK, except when the order of references was descending, and the sae reference [2] was used multiple times in the same sentence. Therefore, \textbf{-10\%} for this category.
+\end{enumerate}
+
+Therefore, the final grade for the text in the document is \textbf{100\% - 10\% - 10\% - 10\% - 10\%) = 60\%}
 
 
 
