About to submit

--- a/Activity 2/21_1002_ProjectReport_template/introduction.tex
+++ b/Activity 2/21_1002_ProjectReport_template/introduction.tex
@@ -50,5 +50,10 @@ This section will provide graeds, out of 100, for the text in the document provi
 
 Therefore, the final grade for the text in the document is \textbf{100\% - 10\% - 10\% - 10\% - 10\%) = 60\%}
 
+\section*{Conclusion}
+This activity involved reviewing of an academic document. The main objective was to critically analyse the document in order to make fair assessment. The activity personally helped me pay more attention to details and learn from the experience of others. 
+
+
+
 
 
