corrected typos. about to submit

--- a/Activity 2/21_1002_ProjectReport_template/introduction.tex
+++ b/Activity 2/21_1002_ProjectReport_template/introduction.tex
@@ -1,19 +1,19 @@
 \chapter*{Evaluation of Text and Referencing in the Document Provided}
 \label{chap1}
 
-The goal of this Activity is to evaluate the text and determine if proper referencing of the sources used has been done. It appears that the main topic addressed is Scene Text Recognition (STR). While reading the document, several issues were found, both with text/language used as well as referencing. The following two sections will take a look at some of these issues. The final section will grade the text out of 100 based on the evaluation. Please refer to the annotated version of the original document (1\_annotated.pdf) in the following sections.
+The goal of this activity is to evaluate the text provided in the document and to determine if proper referencing of the sources used has been done. It appears that the main topic addressed in the document is about Scene Text Recognition (STR). While reading the document, several issues were found, both with text/language used as well as referencing. The following two sections will take a look at some of these issues. The final section will grade the text out of 100 based on the evaluation. Please refer to the annotated version of the original document (1\_annotated.pdf) in the following sections.
 
 \newpage
 
 \section*{Evaluation of Text} 
 Overall, the language used in the document is not consistent or up to standards for academic audience. The following are some of the issues found in the text:
 \begin{itemize}
-    \item \textbf{Clarity and Structure:} Overall, the document lacks cohesion, coherence and, therefore, clarity. 
-    \item  \textbf{Redundancies:} The word \textit{text} is repeated many times, and in same cases, within the same sentence. Please refer to 1\_annotated.pdf for a suggested solution. 
-    \item  \textbf{Long, Complex sentences:} These types of sentences appear several times within the document and are hard to follow. 
-    \item  \textbf{Inadequate Academic Tone:} In a number of cases, the author uses casual tone within senteces, for example, beginning a sentence with "So,...", or "However, there is still so much room". 
-\item  \textbf{Insignificant Definitions:} The some definitions given by the author
-do not provide any meaningful explanations of the subjecct matter, for example, "Text localization aims to localize text components..." or "Text verification focuses on verifying text..."
+    \item \textbf{Clarity and Structure:} Overall, the document lacks cohesion, coherence, and, therefore, clarity. 
+    \item  \textbf{Redundancies:} The word \textit{text} is repeated many times through the document, and, in same cases, multiple times within the same sentence as ilustrated in the annotated document \textbf{1\_annotated.pdf}  
+    \item  \textbf{Long and Complex Sentences:} These types of sentences appear several times within the document and are hard to follow. 
+    \item  \textbf{Inadequate Academic Tone:} In a number of cases, the author uses casual tone within senteces, for example, beginning a sentence with "\textbf{So,}...", or "However, there is still \textbf{so much} room". 
+\item  \textbf{Insignificant Definitions:} Some definitions given by the author
+do not provide any meaningful explanations of the subjecct matter. For example, "Text localization aims to localize text components..." or "Text verification focuses on verifying text..."
 \item  \textbf{Superficial Claims and Conclusions:} The author makes strong claims and conclusions about methods and outcomes without citing sources.
 
 \end{itemize} 
@@ -26,15 +26,15 @@ Many of the referencing issues within the text and Bibliography are due to incon
 \begin{itemize}
     \item \textbf{In-Text Citations}
     \begin{itemize}
-    \item \textbf{Incorrect Order Citations:} The author used a mix of ascending (correct) and descending (incorrect) in-text citation order as in "This idea can be utilized in different computer vision tasks, such as image-based search [1], [2], robots navigation [3], [2] and industrial automation [4], [2]."
- \item \textbf{Citation Redundancy:} The [2] in the above sentence is repeated thrice. This may be due to irrelevant citations, content, or lack of prioritization.
+    \item \textbf{Incorrect Citation Order:} The author used a mix of ascending (correct) and descending (incorrect) in-text citation order as in the sentence "This idea can be utilized in different computer vision tasks, such as image-based search [1], [2], robots navigation [3], [2] and industrial automation [4], [2]."
+ \item \textbf{Citation Redundancy:} The [2] in the above sentence is repeated thrice. This may be due to irrelevant citations or lack of prioritization.
     \end{itemize}
     \item \textbf{Bibliography}
      \begin{itemize}
  \item \textbf{Inconsistent Formatting of Names:} While entry [1] lists authors with initials followed by last names, entries [2], [3], and [5] use the first name followed by the last name. Additionally, entry [4] combines both cases.
  \item \textbf{Inconsistent Formatting of Publishers:} Entry [1] uses IEEE Computer Society, while entry [3] uses "Institute of Electrical and Electronics Engineers Inc., USA
     \end{itemize}
- \item \textbf{Inconsistent Page numbers:} Page numbers are either of different format or missing entirely. 
+ \item \textbf{Inconsistent Page Numbers:} Page numbers are either of different format or missing entirely. 
     \end{itemize}
 \end{itemize}
 \newpage
@@ -42,13 +42,13 @@ Many of the referencing issues within the text and Bibliography are due to incon
 This section will provide graeds, out of 100, for the text in the document provided for this activity (1.pdf). The grades will be distributed among the following categories:
 
 \begin{enumerate}
- \item \textbf{That the latex template provided is properly used:} Here, it seems that the author did not use correctly the template provided due to inconsistencies in the Bibliography. Had the Author used the template the correct way, the references in the papers.bib file would be properly formatted in the Bibliography. Additionally, the title page is missing (this may have been reducted post submission.). Therefore, \textbf{-10\%} for this category.
+ \item \textbf{That the latex template provided is properly used:} Here, it seems that the author did not use correctly the template provided due to inconsistencies in the Bibliography. Had the author used the template the correct way, the references in the papers.bib file would be properly formatted in the Bibliography. Additionally, the title page is missing (this may have been reducted post submission). Therefore, \textbf{-10\%} for this category.
  \item \textbf{That the paragraph(s) make logical sense (no semantic errors) and have appropriate grammar:} Grammar errors include mixed use of past, present and future tenses when describing how Deep Learning methods help STR and "environment noise" instead of "environmental noise" (\textbf{-10\%}). Lack of clarity and structure, as well as long, complex sentences as described in the Evaluation section significantly contribute to semantic errors (\textbf{-10\%}).
- \item \textbf{That the 5 references provided are complete and can be easily found when looking for them online:} The references could be found online. However, Digital Object Identifiers (DOI) would speed up the search.
- \item \textbf{That the references are referred to properly, and that they do reflect the original intention or meaning of the original article being referred:} Generally referencing was OK, except when the order of references was descending, and the sae reference [2] was used multiple times in the same sentence. Therefore, \textbf{-10\%} for this category.
+ \item \textbf{That the 5 references provided are complete and can be easily found when looking for them online:} All references could be found online. However, Digital Object Identifiers (DOI) would speed up the search.
+ \item \textbf{That the references are referred to properly, and that they do reflect the original intention or meaning of the original article being referred:} Generally, referencing was OK, except when the order of references was descending, instead of ascending, and the same reference (i.e. [2]) was used multiple times in the same sentence. Therefore, \textbf{-10\%} for this category.
 \end{enumerate}
 
-Therefore, the final grade for the text in the document is \textbf{100\% - 10\% - 10\% - 10\% - 10\%) = 60\%}
+The final grade for the text in the document is \textbf{100\% - 10\% - 10\% - 10\% - 10\%) = 60\%}
 
 \section*{Conclusion}
 This activity involved reviewing of an academic document. The main objective was to critically analyse the document in order to make fair assessment. The activity personally helped me pay more attention to details and learn from the experience of others. 
